Removed misleading doxygen from robot_mechanism_controller and pr2_mechanism_controllers.

--- a/pr2_mechanism_controllers/doc.dox
+++ b/pr2_mechanism_controllers/doc.dox
@@ -5,105 +5,7 @@
 
 PR2 Specific Controllers
 
-Here are the controllers which are currently implemented:
- \li \ref controller::ArmDynamicsController "Arm Dynamics Controller"
- \li \ref controller::ArmPositionController "Arm Position Controller"
- \li \ref controller::ArmVelocityController "Arm Velocity Controller"
- \li \ref controller::BaseController "Base Controller"
- \li \ref controller::HeadPanTiltController "Head Pan Tilt Controller"
- \li \ref controller::LaserScannerController "Laser Scanner Controller"
-
-
-<hr>
-
-@section topic PR2 Controllers ROS Topics
- - ROS topics published by controllers
-   - Base Controller
-    <table border="1">
-    <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-    <tr><td>\ref controller::BaseController::setOdomMessage "odom"</td>
-        <td><a href="http://pr.willowgarage.com/pr-docs/ros-packages/std_msgs/html/classstd__msgs_1_1Odometry.html">Odometry </a> </td>
-        <td>Odometry information from base caster and wheels. </td></tr>
-    </table><br>
-
- - ROS topics subscribed by controllers
-  - Arm Position Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::ArmPositionControllerNode::setJointPosSingleHeadless_cb "(left/right)_arm_commands"</td>
-      <td>\ref pr2_mechanism_controllers::msg::_JointPosCmd::JointPosCmd "JointPosCmd"</td>
-      <td>Arm configuration command for each joint.</td></tr>
-  </table><br>
-  - Base Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::BaseControllerNode::CmdBaseVelReceived "cmd_vel"</td>
-      <td><a href="http://pr.willowgarage.com/pr-docs/ros-packages/std_msgs/html/classstd__msgs_1_1BaseVel.html">BaseVel </a> </td>
-      <td>Velocity commands for the base (v_x,v_y,v_theta).</td></tr>
-  </table><br>
-
-<hr>
-@section services PR2 Controllers ROS Services
-
-  - Arm Position Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::ArmPositionControllerNode::setJointPosHeadless "(left/right)_arm_controller/set_command"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetJointTarget::SetJointTarget "SetJointTarget"</td>
-      <td>Set arm joint targets.</td></tr>
-  <tr><td>\ref controller::ArmPositionControllerNode::setJointPosSrv "(left/right)_arm_controller/set_command_array"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetJointCmd::SetJointCmd "SetJointCmd"</td>
-      <td>Set arm joint positions.</td></tr>
-  <tr><td>\ref controller::ArmPositionControllerNode::getJointPosCmd "(left/right)_arm_controller/get_command"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_GetJointPosCmd::GetJointPosCmd "GetJointPosCmd"</td>
-      <td>Get arm joint positions. </td></tr>
-  <tr><td>\ref controller::ArmPositionControllerNode::setJointPosTarget "(left/right)_arm_controller/set_target"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetJointTarget::SetJointTarget "SetJointTarget"</td>
-      <td>Set arm joint targets. </td></tr>
-  </table><br>
-  
-  - Base Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::BaseControllerNode::setCommand "base_controller/set_command"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetBaseCommand::SetBaseCommand "SetBaseCommand"</td>
-      <td>Sets the base command v_x, v_y, v_theta. </td></tr>
-  <tr><td>\ref controller::BaseControllerNode::getCommand "base_controller/get_command"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_GetBaseCommand::GetBaseCommand "GetBaseCommand"</td>
-      <td>Gets the base command v_x, v_y, v_theta. </td></tr>
-  </table><br>
-  
-  - Head Pan Tilt Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::HeadPanTiltControllerNode::setJointCmd "head_controller/set_command_array"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetJointCmd::SetJointCmd "SetJointCmd"</td>
-      <td>Sets the commanded joint positions as (name, angle) pairs.</td></tr>
-  <tr><td>\ref controller::HeadPanTiltControllerNode::getJointCmd "head_controller/get_command_array"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_GetJointCmd::GetJointCmd "GetJointCmd"</td>
-      <td>Gets the commanded joint positions as (name, angle) pairs. </td></tr>
-  <tr><td>\ref controller::HeadPanTiltControllerNode::trackPoint "head_controller/track_point"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_TrackPoint::TrackPoint "TrackPoint"</td>
-      <td>Sets the command position given (x, y, z, frame). </td></tr>
-  </table><br>
-  
-  - Laser Scanner Controller
-  <table border="1">
-  <tr><th> Topic Name </th> <th> Message Type </th><th> Description </th></tr>
-  <tr><td>\ref controller::LaserScannerControllerNode::setCommand "tilt_laser_controller/set_command"</td>
-      <td>Double</td>
-      <td>Sets the commanded joint position. </td></tr>
-  <tr><td>\ref controller::LaserScannerControllerNode::getCommand "tilt_laser_controller/get_command"</td>
-      <td>Double</td>
-      <td>Gets the commanded joint position. </td></tr>
-  <tr><td>\ref controller::LaserScannerControllerNode::setProfile "tilt_laser_controller/track_point"</td>
-      <td>\ref pr2_mechanism_controllers::srv::_SetProfile::SetProfile "SetProfile"</td>
-      <td>Sets the sweep profile given (profile, period, amplitude, offset). </td></tr>
-  </table><br>
-     
- 
-@todo rename base_controller/get_actual to base_controller/get_command.
-     update documentation for arm position controller services.
+The controller should be used through their ROS APIs.
 
 **/
 
